# flask-boilerplate

./: .gitignore  .prettierrc.json  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: .env.example  __init__.py  app_factory.py  config.py  extensions.py
app/blueprints/auth/: __init__.py  form.py  login_manager.py  routes.py
app/blueprints/home/: home.py
app/language/: __init__.py  en_us.yml  language_manager.py  pt_br.yml
app/locales/: __init__.py  pt_br.json
app/models/: __init__.py  base.py  db.py  user.py
app/static/css/: beer.min.css  style.css
app/templates/: _flash.jinja  base.jinja
app/templates/auth/: login.jinja  register.jinja  register_success.jinja
app/templates/form/: _input.jinja
app/templates/home/: index.jinja
app/templates/layouts/: base.jinja  mail.jinja
app/templates/mail/en_us/: validate_email.jinja
app/templates/mail/pt_br/: validate_email.jinja
app/templates/partials/: _flash.jinja  _nav.jinja
app/validators/: unique.py
migrations/: env.py
migrations/versions/: d04d2098ac9a_.py  d50194ac5a97_.py
tests/: conftest.py  test_auth.py  test_locale.py
